mastodon/common/01-wasabiproxy.yaml
kind: Service
apiVersion: v1
metadata:
  name: wasabi-proxy
  namespace: mastodon-common
spec:
  ports:
  - name: http
    port: 80
    targetPort: http
  selector:
    app: wasabi-proxy
---
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: wasabi-proxy
  namespace: mastodon-common
  labels:
    app: wasabi-proxy
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: wasabi-proxy
    spec:
      containers:
      - name: nginx
        image: quay.io/serenitylabs/wasabiproxy
        ports:
        - name: http
          containerPort: 80
        resources:
          requests:
            memory: 100Mi
            cpu: 50m
