mastodon/common/03-wasabiproxy-ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: files-deadinsi-de
  namespace: mastodon-common
spec:
  rules:
  - host: files.deadinsi.de
    http:
      paths:
      - backend:
          serviceName: wasabi-proxy
          servicePort: 80
        path: /k8s-deadinside-media
  tls:
  - hosts:
    - files.deadinsi.de
    secretName: files-deadinsi.de
